# jax_demo

./: .gitignore  README.md  pyproject.toml
Test/: conftest.py  test_signal_generator.py  test_timestamp_mapping.py
Test/indicators/: test_atr.py  test_psar.py  test_rsi.py  test_sma.py
jax_patterns/: test_jax_dataclass.py  test_jax_dict_mutation.py  test_type.py
src/backtester/: core_logic.py  main_processor.py  signal_handling.py  state_management.py  trade_state.py  trigger_calculation.py
src/data_handler/: data_loading.py
src/examples/: run_benchmark.py  run_simple_benchmark.py  run_unroll_tuning.py
src/indicators/: ai.md  atr.py  indicators_wrapper.py  psar.py  rma.py  rsi.py  sma.py  tr.py
src/jax_core/: computation_utils.py  indicator_functions.py  signal_generator.py  strategy_function.py
src/process_signal/: core_logic.py  main_processor.py  signal_handling.py  state_management.py  trigger_calculation.py
src/signals/: signal_processors.py  signal_template.py  signal_wrapper.py
src/utils/: config_utils.py  constants.py  jax_cache_config.py  jax_utils.py  logging_utils.py  path_utils.py  profiling_utils.py  timestamp_mapping.py  type_checking_utils.py
