[project]
name = "jax-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["jax>=0.6.2", "pandas>=2.3.0"]


[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "pandas-ta @ git+https://github.com/hxse/pandas-ta.git@development",
    "ta-lib @ https://github.com/cgohlke/talib-build/releases/download/v0.6.3/ta_lib-0.6.3-cp312-cp312-win_amd64.whl ; sys_platform == 'win32'",
    "ta-lib>=0.6.4 ; sys_platform != 'win32'",
    "jax[cuda12]>=0.6.2; sys_platform != 'win32'",
]
